# resample

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/assets/: 16k.pcm
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/ohos/: build-profile.json5  oh-package.json5
example/ohos/AppScope/: app.json5
example/ohos/AppScope/resources/base/element/: string.json
example/ohos/entry/src/main/resources/en_US/element/: string.json
example/ohos/entry/src/main/resources/zh_CN/element/: string.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: resample.podspec
lib/: resample.dart  resample_bindings_generated.dart
linux/: CMakeLists.txt
macos/: resample.podspec
macos/Classes/: resample.c
ohos/: oh-package.json5
ohos/src/main/: module.json5
src/: CMakeLists.txt  resample.c  resample.h
windows/: CMakeLists.txt
(+1 files in other folders)
